css/sidepanel.css
div#side {
	float: left;
	width: 240px;
	height: 100%;
	border-right: 1px solid #4c433e;
	background-color: #f7f4ef;
	overflow-y: hidden;
}

#controls{
	padding: 7px 20px;
	height: 30px;
	cursor: pointer;
}

#controls div{
	float: left;
	width: 55px;
	height: inherit;
	background-color: #4d433e;
	background-position: center center;
	background-repeat: no-repeat;
	color: white;
	text-align: center;
	line-height: 30px;
}

#controls div:hover {
	background-color: #73655f;
}

#controls #play{
	width: 85px;
	border-right: 1px solid #3c342c;
	border-left: 1px solid #3c342c;
	background-image: url(../images/play.png);
	background-repeat: no-repeat;
	background-position: 60px 8px;
}

#controls #play.playing{
	background-image: url(../images/pause.png);
	background-position: 60px 9px;
}

#controls #prev{
	-webkit-border-radius: 5px 0px 0px 5px;
	-moz-border-radius: 5px 0px 0px 5px;
	border-radius: 5px 0px 0px 5px;
	background-image: url(../images/prev.png);
}

#controls #next{
	-webkit-border-radius: 0px 5px 5px 0px;
	-moz-border-radius: 0px 5px 5px 0px;
	border-radius: 0px 5px 5px 0px;
	background-image: url(../images/next.png);
}

.triangle {
	float: left;
	width: 10px;
	height: 10px;
	background-image: url(../images/collapseArrow.png);
	margin-top: 20px;
	margin-left: 20px;
	cursor: pointer;
}

.triangle.open {
	background-position: 0 -10px;
}

.heading{
	margin: 0 20px 10px 35px;
	color: #4d433e;
	font: bold 18px / 50px 'PT Serif', serif;
	cursor: pointer;
}

#text{
	overflow-y: auto;
	padding: 0 0 0 35px;
	margin-bottom: 10px;
	margin-right: 20px;
	font-style: italic;
	font-size: 14px;
	border-bottom: 1px solid #999;
}

#text, #legend {
	transition: height 0.25s;
	-webkit-transition: height 0.25s;
	-moz-transition: height 0.25s;
}


#legend {
	margin-left: 35px;
	height: 0;
	overflow: hidden;
	padding-bottom: 10px;
}

#legend  p { 
	margin: 10px 20px 5px 0;
	padding-top: 10px;
	font-weight: bold;
	border-top: 1px solid #999;
}

#legend img { 
	vertical-align: middle; 
	margin-right: 5px;
	margin-left: 9px;
}

#legend > div img {
	margin-top: 5px;
	margin-bottom: 5px;
}

#legend #units {
	margin-bottom: 10px;
}

#legend a.fancybox {
	text-decoration: none;
	color: #4d433e;
}

